# dify-telegram-bot

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.do/: app.yaml  deploy.dify-telegram-bot.yaml  deploy.template.yaml
src/: configuration.py
src/bot/: __main__.py  dispatcher.py
src/bot/locales/en/: lexicon.ftl
src/bot/locales/ru/: lexicon.ftl
src/bot/logic/: __init__.py
src/bot/logic/dialogs/start/: dialog.py  getter.py
src/bot/logic/handlers/: commands.py  conversation.py  start.py
src/bot/logic/tasks/: dify.py
src/bot/middlewares/: __init__.py  i18n_md.py
src/bot/structures/: data_structure.py  enums.py
src/bot/structures/FSM/: base_fsm.py  dialog_fsm.py
src/bot/utils/: custom_widgets.py
src/bot/utils/translation/: fluentogram.py
src/dify/: base.py  client.py
